--- a/html.html
+++ b/html.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello friend
-        
-    </h1>
-    <p>lok mama i can pushgit</p>
-    <p>its your amma</p>
+   <h1> i love bangladeshgit add</h1>
 </body>
 </html>
